[package]
name = "colorette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.2", features=["json"]}
mysql = "22.2.0"
yew = "0.19.0"
sha2 = "0.10.2"
jsonwebtoken = "8.1.1"
chrono = "0.4"
reqwest = "0.11.11"
rand = "0.8.5"
image = "0.24.0"
